makecache: add support for out-of-tree, non-recursive automake

When attempting to resolve the CFLAGS, resolve relative paths so that
clang can find the files appropriately. Clang expects that the CFLAGS
are relative to the source file.

https://bugzilla.gnome.org/show_bug.cgi?id=747582